--- a/static/stylesheets/custom_of.css
+++ b/static/stylesheets/custom_of.css
@@ -21,6 +21,47 @@
     font-size: inherit;
 }
 
+/* Section audit logs -------------------------------------- */
+.audit h2 {
+    font-size:1.25rem;
+    border-left: solid 8px #1992d4;
+    border-bottom: none;
+    background-color: #F3F1E8;
+    margin-top: 2.5em;
+    margin-bottom: 0.125em;
+    padding: 12px;
+    line-height: 1.5em;
+}
+
+.audit h3 {
+    font-size: 1.125rem;
+    margin-top: 1.5em;
+    margin-bottom: 1em;
+    border-bottom:#1992d4 solid 2px;
+    border-left: none;
+    font-weight: bold;
+}
+
+.audit ol {
+    margin: 0 0 0;
+    padding-left: 0;
+}
+
+.audit ol > li > p {
+    font-weight: normal;
+}
+
+.audit ol > li {
+    font-size: 1rem;
+}
+
+.audit ol > li::marker {
+    font-size: 1rem;
+    font-weight: normal;
+    font-family: initial;
+}
+
+
 @media only screen and (min-width: 768px) {
     .logo-wrap {
         width: 390px;
