--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -1064,7 +1064,7 @@ h6 + .id-link-button {
     overflow: auto;
 }
 .article img {
-    max-width: 100%
+    max-width: 600px;
 }
 .article img.screenshot {
     margin: 21px 0;
