--- a/layouts/partials/treenav.html
+++ b/layouts/partials/treenav.html
@@ -14,6 +14,8 @@
         {{- $lastpage = (slice "/user/basic/" "/user/personal/" "/admin/spec/" "/admin/system/" "/option/migration/" "/intro/first/" "/intro/install/" "/intro/verup/" "/intro/uninstall/") }}
     {{- else if eq $.Site.Params.product "Office" }}
         {{- $lastpage = (slice "/intro/first/" "/intro/install/" "/intro/uninstall/" "/option/migration/" "/guide/" "/pdf/" "/error/") }}
+    {{- else if eq $.Site.Params.product "Remote" }}
+        {{- $lastpage = (slice "/intro/" "/admin/" "/user/") }}
     {{- end }}
     {{- range $lastpage }}
         {{- if in $.RelPermalink . }}
@@ -30,7 +32,7 @@
     {{- if and ( eq $.Site.Params.product "Office" ) ( eq $currentSection "error" ) }}
         {{- $tocregex = "<h2.*?>(.|\n)*?</h2>" }}
     {{- end }}
-    {{- if or (eq $.Site.Params.product "Garoon") (eq $.Site.Params.product "Mailwise") (eq $.Site.Params.product "Office")}}
+    {{- if or (eq $.Site.Params.product "Garoon") (eq $.Site.Params.product "Mailwise") (eq $.Site.Params.product "Office") (eq $.Site.Params.product "Remote")}}
         {{- $needtoc = true }}
         {{- if in .RelPermalink "/application.html" }}
             {{- $needtoc = false }}
