--- a/layouts/shortcodes/hint.html
+++ b/layouts/shortcodes/hint.html
@@ -1,6 +1,6 @@
 <aside class="admonition hint">
   <div class="admonition-alt">
-{{- if and (ne .Site.Params.product "Garoon") (ne .Site.Params.product "Mailwise") (ne .Site.Params.product "Office") }}
+{{- if and (ne .Site.Params.product "Garoon") (ne .Site.Params.product "Mailwise") (ne .Site.Params.product "Office") (ne .Site.Params.product "Remote")}}
     <i class="fas fa-lightbulb" aria-hidden="true"></i>
 {{- end }}
     <span class="admonition-alt-text">{{ i18n "Title_tips" }}</span>
