--- a/layouts/shortcodes/warning.html
+++ b/layouts/shortcodes/warning.html
@@ -1,6 +1,6 @@
 <aside class="admonition warning">
   <div class="admonition-alt">
-{{- if and (ne .Site.Params.product "Garoon") (ne .Site.Params.product "Mailwise") (ne .Site.Params.product "Office") }}
+{{- if and (ne .Site.Params.product "Garoon") (ne .Site.Params.product "Mailwise") (ne .Site.Params.product "Office") (ne .Site.Params.product "Remote") }}
     <i class="fas fa-exclamation-circle" aria-hidden="true"></i>
 {{- end }}
     <span>{{ i18n "Title_caution" }}</span>
