--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -73,7 +73,7 @@
     <meta name="apple-mobile-web-app-title" content="{{$title}}">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    {{- if and (ne .Site.Params.product "Office") (ne .Site.Params.product "Mailwise") (eq .Site.Params.product "Remote")}}
+    {{- if and (ne .Site.Params.product "Office") (ne .Site.Params.product "Mailwise") (ne .Site.Params.product "Remote")}}
     {{- partial "alternatelink" . }}
     {{- end }}
     <link rel="shortcut icon" type="image/x-icon" href="{{ with .Site.Params.favicon }}{{ . | relURL }}{{ else }}{{ "favicon.ico" | relURL }}{{ end }}">
