--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -37,6 +37,8 @@
             {{- $disp_sbox = false }}
         {{- else if and (eq $.Site.Params.TargetRegion "US") .IsHome }}
             {{- $disp_sbox = false }}
+        {{- else if eq .Params.type "gr6/home" }}
+            {{- $disp_sbox = false }}
         {{- end }}
 
         {{- if eq $disp_sbox true }}
@@ -46,7 +48,7 @@
                 {{- $glang = "zh-TW" }}
             {{- end }}
             {{- $u := urls.Parse $.Site.BaseURL }}
-            <div id="search" class="search-wrap {{ if and ( hasPrefix $u.Path "/g6/" ) (eq .Params.type "gr6/home" ) }}header-search-hidden {{ end }}">
+            <div id="search" class="search-wrap">
                 <form id="searchBox_form" action="{{ "" | relURL }}{{.Lang}}/search_result.html" onsubmit='if(document.getElementById("headerSearchBox_input").value==""){return false;}' role="search" >
                     <div class="searchbox">
                         <input type="search" name="q" id="headerSearchBox_input" class="search-input home-search-input" role="searchbox" aria-label='{{i18n "search_word"}}' placeholder='{{i18n "Enter_keywords"}}'>
