--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -126,7 +126,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios@1.6.0/dist/axios.min.js"></script>
     {{- end}}
     {{- $u := urls.Parse $.Site.BaseURL }}
-    {{- if ( hasPrefix $u.Path "/g6/" ) -}}
+    {{- if eq .Params.type "gr6/home" -}}
     <script src="{{ printf "%s?%s" "javascripts/custom_gr6.js" $buildnum | relURL }}"></script>
     {{- end -}}
     {{- if or
