--- a/layouts/partials/meganav_gr.html
+++ b/layouts/partials/meganav_gr.html
@@ -38,14 +38,14 @@
             <a href="{{ . | relURL }}" target="_blank">
                 <span class="g-nav-title-wrap">
                     {{- i18n "Header_nav_faq" -}}
-                    <img class="g-nav-title-wrap-external-icon" src="{{ $.Site.Params.icon_external | relURL }}" alt="">
+                    <span class="g-nab-title-icon-right"><i class="fas fa-external-link-alt" aria-hidden="true"></i></span>
                 </span>
             </a>
         </li>
     {{- end -}}
     </ul>
 {{- $u := urls.Parse $.Site.BaseURL }}
-<div class="mega-nav {{ if and ( hasPrefix $u.Path "/g6/" ) ( .IsHome ) }}mega-nav-home{{ end -}}">
+<div class="mega-nav {{ if eq .Params.type "gr6/home" }}mega-nav-home{{ end -}}">
 {{- if gt $seconditems 0 }}
         <div class="mega-tab-wrap">
             <div class="mega-tab-head"><h2 class="mega-tab-guide">{{ i18n "By_features" }}</h2></div>
