TcTodo-352 fixed footer position

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -1838,6 +1838,7 @@ i.index-pdf {
 
 /* Footer -------------------- */
 .footer {
+    position: relative;
     bottom: 0;
     left: 0;
     right: 0;
