Not apply unnecessary style for search-result

--- a/layouts/search_result/single.html
+++ b/layouts/search_result/single.html
@@ -10,7 +10,7 @@
     <div class="contents-wrap">
         <main class="main" role="main">
             {{- partial "breadcrumb" . }}
-            <article class="article" >
+            <article class="search-result" >
             {{/* - if ne $.Site.Params.TargetRegion "US" */}}
                 <h1>{{ partial "title" . }}</h1>
             {{/* - end */}}
