--- a/static/stylesheets/custom_mw.css
+++ b/static/stylesheets/custom_mw.css
@@ -6,6 +6,7 @@ a,
 .col-tile-gr .tile-title,
 .col-tile-gr i,
 .article a,
+.search-result a,
 .tree-title a,
 .tree-subtitle a {
     color: #d0324b;
