--- a/static/stylesheets/custom_of.css
+++ b/static/stylesheets/custom_of.css
@@ -21,6 +21,10 @@
     font-size: inherit;
 }
 
+.search-result a {
+    color: #1b72cd;
+}
+
 /* Section audit logs -------------------------------------- */
 .audit h2 {
     font-size:1.25rem;
