--- a/static/stylesheets/custom_gr.css
+++ b/static/stylesheets/custom_gr.css
@@ -335,6 +335,10 @@ background: rgba(255, 255, 255, 0.9);
 /* -------------------- End of article */
 
 /* search-result  -------------------- */
+.search-result h1 {
+    padding-top: 0;
+}
+
 .search-result a {
     color: #1b72cd;
 }
