--- a/static/stylesheets/search_result.css
+++ b/static/stylesheets/search_result.css
@@ -40,7 +40,7 @@ body { overflow-y: scroll; }
 
 .search-result {
     margin-left: 0;
-    width: 100%
+    width: 100%;
 }
 
 .search-result h1 {
@@ -325,6 +325,10 @@ body { overflow-y: scroll; }
     }
     .search-words {
         width: 496px;
+    }
+
+    .search-result {
+        padding-bottom: 100px;
     }
 }
 
