--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -1039,11 +1039,11 @@ h6 + .id-link-button {
 }
 .article ol>li {
     padding: 5px 0 5px 10px;
-    margin: 0 0 15px 30px;
+    margin: 0 0 15px 0px;
 }
 .article ol>li::marker {
     color: #000000;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     font-weight: 600;
     line-height: 33px;
 }
@@ -1057,7 +1057,7 @@ h6 + .id-link-button {
     margin-top: .9em;
 }
 .article ul li {
-    margin-bottom: 7px;
+    margin: 0 5px 7px 5px;
 }
 .article li > ul {
     margin-top: 7px;
