add latest page guide

--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -33,6 +33,7 @@
         {{- if eq $.Site.Params.use_wovn true }}
             {{ partial "disclaimer2" . }}
         {{- end }}
+        {{- partial "latestpageguide" . }}
         <main id="main" role="main"> 
             {{- partial "breadcrumb" . -}}
             <article class="article">
