--- a/layouts/gr/section_top_purpose/section.html
+++ b/layouts/gr/section_top_purpose/section.html
@@ -11,6 +11,7 @@
     {{- if and (eq $.Site.Params.product "Garoon") (ne $.Site.LanguageCode "ja-jp") (ne $.Site.LanguageCode "ja-cn") }}
         {{ partial "disclaimer" . }}
     {{- end }}
+    {{- partial "latestpageguide" . }}
     {{- partial "breadcrumb" . -}}
     <main id="main">
         <h1>{{ partial "title" . }}</h1>
