Don't get single pages

--- a/layouts/gr/section_top/section.html
+++ b/layouts/gr/section_top/section.html
@@ -36,7 +36,7 @@
 {{- define "sectmenu" }}
     {{- $cursect := .cursect }}
   <div>
-    {{- range $cursect.Pages.ByWeight }}
+    {{- range $cursect.Sections.ByWeight }}
     <div class="mega-title">
         <h2>
             {{- if ne .Params.nolink true -}}
