--- a/layouts/of/subsection_top/section.html
+++ b/layouts/of/subsection_top/section.html
@@ -35,7 +35,7 @@
     {{- $cursect := .cursect }}
     {{- $target := .target }}
   <div>
-    {{- range $cursect.Pages.ByWeight }}
+    {{- range $cursect.Sections.ByWeight }}
         {{- if in . $target }}
     <div class="mega-title">
             <span class="fa-stack">
