fixed section top page of Office

--- a/layouts/of/subsection_top/section.html
+++ b/layouts/of/subsection_top/section.html
@@ -33,7 +33,7 @@
 
 {{- define "sectmenu_single" }}
     {{- $cursect := .cursect }}
-    {{- $target := .target }}
+    {{- $target := strings.TrimRight "/" .target }}
   <div>
     {{- range $cursect.Pages.ByWeight }}
         {{- if in . $target }}
